--- a/index.html
+++ b/index.html
@@ -27,7 +27,29 @@
   <button type="submit" class="btn btn-primary">Donate</button>
   <button type="submit" class="btn btn-secondary">Cancel</button>
 </form>
+<div>
+	<table class="table table-bordered">
+	  
+			<!-- On rows -->
+<!-- 		<tr class="active">...</tr>
+		<tr class="success">...</tr>
+		<tr class="warning">...</tr>
+		<tr class="danger">...</tr>
+		<tr class="info">...</tr> -->
 
+		<!-- On cells (`td` or `th`) -->
+		<tr>
+			<th>Name</th>
+			<th>Donation Amount</th>
+			<th>Donation Basis</th>
+<!-- 		  <td class="active">...</td>
+		  <td class="success">...</td>
+		  <td class="warning">...</td>
+		  <td class="danger">...</td>
+		  <td class="info">...</td> -->
+		</tr>
+	</table>
+</div>
 	<script
   src="https://code.jquery.com/jquery-3.1.1.min.js"
   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
