--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 				      				<div class="input-group-addon">.00</div>
 				    		</div>
 				    	   	<div class="donation">
-				      	  <label for="increament">Donation Basis</label>
+				      	  <label for="increament">Donation Type:</label>
 				      		<input type="radio" value="single"> Single
 				      		<input type="radio" value="per-lap"> Per-Lap
 				       	</div>
