--- a/index.html
+++ b/index.html
@@ -16,27 +16,17 @@
 					</div>
 						<div class="panel-body">
 							<table class="table table-bordered">
-					  
-								<!-- On rows -->
-					<!-- 		<tr class="active">...</tr>
-							<tr class="success">...</tr>
-							<tr class="warning">...</tr>
-							<tr class="danger">...</tr>
-							<tr class="info">...</tr> -->
-
-							<!-- On cells (`td` or `th`) -->
-							<tr>
-								<th>Name</th>
-								<th>Email Address</th>
-								<th>Donation Amount</th>
-								<th>Donation Basis</th>
-					<!-- 		  <td class="active">...</td>
-							  <td class="success">...</td>
-							  <td class="warning">...</td>
-							  <td class="danger">...</td>
-							  <td class="info">...</td> -->
-							</tr>
-						</table>
+					  		<thead>
+					  			<tr>
+						  			<th>Name:</th>
+						  			<th>Email:</th>
+						  			<th>Donation Amount:</th>
+						  			<th>Donation Basis:</th>
+					  			</tr>
+					  		</thead>
+					  		<tbody id="tbody">
+					  		</tbody>
+							</table>
 					</div>
 				</div>
 			</div>
@@ -49,7 +39,7 @@
 				<h3>Enter Your Information</h3>
 			</div>
 				<div class="panel-body">
-				<form class="form">
+				<!-- <form class="form"> -->
 				  <div class="form-group">
 				    <label for="exampleInputName2">Full Name</label>
 				    <input type="text" class="form-control" id="exampleInputName2" placeholder="Jane Doe">
@@ -73,12 +63,11 @@
 				       	</div>
 				  		<button type="submit" class="btn btn-primary" id="donate">Donate</button>
 				  		<button type="submit" class="btn btn-secondary" id="cancel">Cancel</button>
-				</form>
+<!-- 				</form> -->
 				</div>
 		</div>
 	</div>
 </div>
-	<script src="DOMHandler.js"></script>
 	<script src="donor.js"></script>
 	<script
   src="https://code.jquery.com/jquery-3.1.1.min.js"
